# mail_parser_ex

./: .gitignore  README.md  mix.exs
lib/: mail_parser_ex.ex
native/mailparsernative/: Cargo.toml  README.md
native/mailparsernative/src/: lib.rs
test/: mail_parser_ex_test.exs
